--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,5 @@
-<div>
+<div class="delan">
+    <div>
     <h3 class="footer">
         Jr Miguel Grau 892 - El Tambo <p>
         Huancayo, Perú | 064242424
@@ -7,14 +8,16 @@
         <input  style="width: 300px; height: 30px;" type="text" name="nombredelacaja"><p>
             SUSCRIBETE
     </a>
-</div>
+    </div>
 
-<div class="footicon">
-    <img class="ico" type="submit" src="assets/icons/facebook.png" width="70">
-    <img class="ico" src="assets/icons/whatsapp.png" width="70">
-    <img class="ico" src="assets/icons/instagram.png" width="70">
+    <div class="footicon">
+    <img class="icos" type="submit" src="assets/icons/facebook.png" width="70">
+    <img class="icos" type="submit" src="assets/icons/whatsapp.png" width="70">
+    <img class="icos" type="submit" src="assets/icons/instagram.png" width="70">
      <a class="btn btn-primary" href="#">CONTACTENOS</a>
+     <p class="copy">&copy; 2020 HostalTamboWasi.com<p></p>
+    </div>
 </div>
 
-<p class="copy">&copy; 2015 HostalTamboWasi.com<p></p>
+
 
