--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light static-top">
-  <div class="container delan">
+  <div class="container">
     <a class="navbar-brand"><img src="assets/logo.png" width="200" height="100"></a>
     <ul class="nav justify-content-end">
       <li class="nav-item">
