--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <router-outlet> </router-outlet>
 <app-header></app-header>
-<app-inicio></app-inicio>
+<app-contactenos></app-contactenos>
 <app-footer></app-footer>
