FRONTEND SIN CRUD

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -14,7 +14,7 @@
     <img class="icos" type="submit" src="assets/icons/facebook.png" width="70">
     <img class="icos" type="submit" src="assets/icons/whatsapp.png" width="70">
     <img class="icos" type="submit" src="assets/icons/instagram.png" width="70">
-     <a class="btn btn-primary" href="#">CONTACTENOS</a>
+     <a class="btn btn-primary" routerLink="contactenos">CONTACTENOS</a>
      <p class="copy">&copy; 2020 HostalTamboWasi.com<p></p>
     </div>
 </div>
