--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,18 +3,18 @@
     <a class="navbar-brand"><img src="assets/logo.png" width="200" height="100"></a>
     <ul class="nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link active" href="#">INICIO</a>
+        <a class="nav-link active" routerLink="inicio">INICIO</a> 
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">HABITACIONES</a>
+        <a class="nav-link" routerLink="habitacion">HABITACIONES</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">NOSOTROS</a>
+        <a class="nav-link" routerLink="nosotros">NOSOTROS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">CONTACTENOS</a>
+        <a class="nav-link" routerLink="contactenos">CONTACTENOS</a>
       </li>
     </ul>
-    <a class="btn btn-primary" href="#">RESERVAR</a>
+    <a class="btn btn-primary" routerLink="contactenos">RESERVAR</a>
   </div>
 </nav>
