--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,6 @@
         <a class="nav-link" routerLink="contactenos">CONTACTENOS</a>
       </li>
     </ul>
-    <a class="btn btn-primary" routerLink="contactenos">RESERVAR</a>
+    <a class="btn btn-primary" routerLink="reserva">RESERVAR</a>
   </div>
 </nav>
